<resources>
    <string name="app_name" translatable="false">SmartExpenses</string>
    <string name="title_home">Home</string>
    <string name="follow_expenses">Follow expenses</string>
    <string name="from_anywhere">from anywhere</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="find_cheap_places">Find cheap places</string>
    <string name="in_seconds">in seconds</string>
    <string name="share_expenses">Share expenses</string>
    <string name="with_anyone">with_anyone</string>
    <string name="sign_in_to_smart_expenses">Sign in to Smart Expenses</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="get_started">Get started…</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_now">Register now</string>
    <string name="by_signing_up_i_agree_smart_expenses">By signing up, I agree Smart Expenses’\n<b> Terms and Conditions</b></string>
    <string name="welcome">Welcome</string>
    <string name="settings">Settings</string>
    <string name="rates">Rates</string>
    <string name="my_expenses">My Expenses</string>
    <string name="social">Social</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="latest_spendings">Latest spendings</string>
    <string name="cheap_places_to_explore_nearby">Cheap places to explore nearby…</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="passwords_are_not_same">Passwords are not same</string>
    <string name="password_is_invalid">Password minimum length is 8 and it should contain at least one character and one digit</string>
    <string name="something_went_wrong">something_went_wrong</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="select_category">Select category</string>
    <string name="expense_name_is_invalid">Expense name should not be empty</string>
    <string name="category_not_selected">Category not selected</string>
    <string name="amount_should_be_more_than_0">Amount should be more than 0</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude, longitude used</string>
    <string name="no_address_found">No address is used</string>
    <string name="address_found">Address found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="delete_expense">Delete expense</string>
    <string name="are_you_sure_to_delete_expense">Are you sure to delete expense?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="expense_deleted_successfully">Expense deleted successfully</string>
    <string name="total_spendings">Total spendings</string>
    <string name="notifications">Notifications</string>
    <string name="number_of_latest_spendings">Number of latest spendings</string>
    <string name="privacy">Privacy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="set_profile_color">Set profile color</string>
    <string name="choose_profile_color">Choose color</string>
    <string name="select_picture">Select picture</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="currency">Currency</string>
    <string name="amount_in_usd">Amount in USD</string>
    <string name="address">Address</string>
    <string name="choose_amount_for_recent_expenses">Choose amount for recent expenses</string>

    <string-array name="categories">
        <item>Restaurant</item>
        <item>Tickets</item>
        <item>Museum</item>
        <item>Hotel</item>
        <item>Cash</item>
        <item>Shopping</item>
        <item>Gas</item>
        <item>Travel</item>
        <item>Other</item>
    </string-array>

</resources>
