<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/my_expenses" />

    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/social" />

    <item
        android:id="@+id/navigation_rates"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/rates" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_perm_identity_black_24dp"
        android:title="@string/settings" />

</menu>
