<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/get_started"
        android:textColor="#2e2727"
        android:textSize="27sp"
        android:textStyle="bold" />

    <com.joerakhimov.smartexpenses.view.input.SmartInput
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:inputType="textEmailAddress"
        app:smartInputHint="@string/enter_your_e_mail"
        app:smartInputLabel="@string/email_address" />

    <com.joerakhimov.smartexpenses.view.input.SmartInput
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword"
        app:smartInputHint="@string/enter_your_password"
        app:smartInputLabel="@string/password" />

    <com.joerakhimov.smartexpenses.view.input.SmartInput
        android:id="@+id/inputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:inputType="textPassword"
        app:smartInputHint="@string/enter_your_password"
        app:smartInputLabel="@string/confirm_password" />

    <com.joerakhimov.smartexpenses.view.button.SmartButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:smartButtonText="@string/register_now"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/by_signing_up_i_agree_smart_expenses"
        android:lineSpacingExtra="8dp"
        android:textColor="#868281"
        android:textSize="13sp" />

</LinearLayout>