<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".screen.auth.signin.SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:gravity="center_horizontal"
        android:text="@string/sign_in_to_smart_expenses"
        android:textColor="#2e2727"
        android:textSize="27sp"
        android:textStyle="bold" />

    <com.joerakhimov.smartexpenses.view.input.SmartInput
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:smartInputHint="@string/enter_your_e_mail"
        android:inputType="textEmailAddress"
        app:smartInputLabel="@string/email_address" />

    <com.joerakhimov.smartexpenses.view.input.SmartInput
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        app:smartInputHint="@string/enter_your_password"
        android:inputType="textPassword"
        app:smartInputLabel="@string/password" />

    <com.joerakhimov.smartexpenses.view.button.SmartButton
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        app:smartButtonText="@string/sign_in" />

</LinearLayout>