<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_navigation"
    app:startDestination="@id/destination_welcome">

    <fragment
        android:id="@+id/destination_welcome"
        android:name="com.joerakhimov.smartexpenses.screen.auth.welcome.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome"/>

    <fragment
        android:id="@+id/destination_login"
        android:name="com.joerakhimov.smartexpenses.screen.auth.login.LoginFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_login"/>

    <fragment
        android:id="@+id/destination_register"
        android:name="com.joerakhimov.smartexpenses.screen.auth.register.RegisterFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_register"/>

</navigation>