<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import
            alias="view"
            type="android.view.View" />

        <variable
            name="vm"
            type="com.joerakhimov.smartexpenses.screen.main.addexpense.AddExpenseViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.main.addexpense.AddExpenseFragment">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="24dp">

            <com.joerakhimov.smartexpenses.view.input.SmartInput
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:inputType="textCapSentences"
                app:smartInputLabel="@string/name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="bottom"
                android:layout_marginBottom="24dp">

                <com.joerakhimov.smartexpenses.view.input.SmartInput
                    android:id="@+id/inputAmount"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:smartInputLabel="@string/amount"
                    android:inputType="number"
                    android:layout_marginRight="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HUF"
                    android:layout_marginBottom="4dp"
                    android:textColor="#2e2727"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.joerakhimov.smartexpenses.view.spinner.SmartSpinner
                android:id="@+id/spinnerCategory"
                app:smartSpinnerLabel="@string/select_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.joerakhimov.smartexpenses.view.button.SmartButton
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                app:smartButtonText="@string/save"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="12dp"
                android:visibility="@{vm.isLoading? view.GONE : view.VISIBLE}"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="12dp"
                android:visibility="@{vm.isLoading? view.VISIBLE : view.GONE}" />

        </LinearLayout>

    </FrameLayout>
</layout>